# ChangeLog for app-backup/dar
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/dar/ChangeLog,v 1.43 2011/12/04 01:11:22 matsuu Exp $

*dar-2.4.2 (04 Dec 2011)

  04 Dec 2011; MATSUU Takuto <matsuu@gentoo.org> +dar-2.4.2.ebuild:
  Version bumped, bug #387501.

*dar-2.4.0 (07 Jun 2011)

  07 Jun 2011; MATSUU Takuto <matsuu@gentoo.org> dar-2.3.11.ebuild,
  +dar-2.4.0.ebuild, +files/dar-2.4.0-gcc.patch, metadata.xml:
  Version bumped. Fixed static-libs handling. Added lzo and gcrypt USE flags.

*dar-2.3.11 (11 May 2011)

  11 May 2011; MATSUU Takuto <matsuu@gentoo.org> +dar-2.3.11.ebuild:
  Version bumped, bug #297429 and #3199845. Added static and static-libs USE
  flags, bug #273337.

*dar-2.3.9 (22 May 2009)

  22 May 2009; MATSUU Takuto <matsuu@gentoo.org> +dar-2.3.9.ebuild:
  Version bumped.

  01 Jan 2009; MATSUU Takuto <matsuu@gentoo.org> -dar-2.3.3.ebuild,
  -dar-2.3.7-r1.ebuild:
  Removed old versions.

  08 Nov 2008; Raúl Porcel <armin76@gentoo.org> dar-2.3.8.ebuild:
  sparc stable wrt #243078

  25 Oct 2008; nixnut <nixnut@gentoo.org> dar-2.3.8.ebuild:
  Stable on ppc wrt bug 243078

  23 Oct 2008; Markus Meier <maekke@gentoo.org> dar-2.3.8.ebuild:
  amd64/x86 stable, bug #243078

  01 Aug 2008; nixnut <nixnut@gentoo.org> dar-2.3.7-r1.ebuild:
  Stable on ppc wrt bug 225839

  23 Jul 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  05 Jul 2008; Richard Freeman <rich0@gentoo.org> dar-2.3.7-r1.ebuild:
  amd64 stable - 225839

*dar-2.3.8 (20 Jun 2008)

  20 Jun 2008; MATSUU Takuto <matsuu@gentoo.org> -dar-2.3.7.ebuild,
  +dar-2.3.8.ebuild:
  Version bumped.

  17 Jun 2008; Christian Faulhammer <opfer@gentoo.org> dar-2.3.7-r1.ebuild:
  stable x86, bug 225839

  16 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> dar-2.3.7-r1.ebuild:
  stable on sparc, bug #225839

*dar-2.3.7-r1 (17 May 2008)
