@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/dar/dar-2.4.2.ebuild,v 1.1 2011/12/04 01:11:22 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/dar/dar-2.4.2.ebuild,v 1.2 2012/02/08 21:01:53 grobian Exp $
 
 EAPI="3"
 inherit confutils eutils flag-o-matic
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/dar/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~amd64-linux"
 IUSE="acl dar32 dar64 doc gcrypt lzo nls static static-libs"
 
 RESTRICT="test" # need to be run as root
@@ -58,7 +58,7 @@ src_configure() {
 }
 
 src_install() {
-	emake DESTDIR="${D}" pkgdatadir=/usr/share/doc/${PF}/html install || die
+	emake DESTDIR="${D}" pkgdatadir="${EPREFIX}"/usr/share/doc/${PF}/html install || die
 
 	if ! use static-libs ; then
 		find "${ED}" "(" -name '*.la' -o -name '*.a' ")" -delete || die
